--- a/Princess_Cruise/Web.config
+++ b/Princess_Cruise/Web.config
@@ -11,6 +11,8 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Princess_Cruise-20161202023707.mdf;Initial Catalog=aspnet-Princess_Cruise-20161202023707;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="Princess_DatabaseConnectionString" connectionString="Data Source=princess-cruise-server.database.windows.net;Initial Catalog=Princess_Database;User ID=kenzomiyazawa;Password=Kyr4l0v3meil0v3kyr4"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <authentication mode="None" />
